@@ -1,5 +1,11 @@
 2009-12-21  Robert Millan  <rmh.grub@aybabtu.com>
 
+	* util/grub-mkrescue.in: Remove `memdisk', `tar' and `search' modules
+	from i386-pc build (not needed for bootstrap).
+	Rewrite a pair of strings.
+
+2009-12-21  Robert Millan  <rmh.grub@aybabtu.com>
+
 	* normal/main.c (grub_normal_reader_init): Set left margin back to 3.
 
 2009-12-21  Vladimir Serbinenko  <phcoder@gmail.com>
